RESOLVED FIXED22985
RenderLayer cached clip rects are sometimes incorrect
https://bugs.webkit.org/show_bug.cgi?id=22985
Summary RenderLayer cached clip rects are sometimes incorrect
Simon Fraser (smfr)
Reported 2008-12-24 13:59:59 PST
I added an assertion to test that cached clip rects are used with the same rootLayer as they were computed with. This caught a couple of problems, which I'll submit a patch for.
Attachments
Patch, changelog (4.32 KB, patch)
2008-12-24 14:11 PST, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2008-12-24 14:11:22 PST
Created attachment 26241 [details] Patch, changelog I wasn't able to easily create a LayoutTest to exercise these fixes, but the assertion provides testing.
Simon Fraser (smfr)
Comment 2 2008-12-24 14:13:22 PST
Also, did you know that clipRects are cleared on every mouse move, because MouseRelatedEvent::receivedTarget() calls layer->updateLayerPosition() before setting event->layerX and event->layerY (which are totally bogus anyway, bug 21868).
Dave Hyatt
Comment 3 2009-01-05 14:23:48 PST
Comment on attachment 26241 [details] Patch, changelog r=me. If you can make a test case please do so. If not, ok.
Simon Fraser (smfr)
Comment 4 2009-01-05 21:38:00 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/rendering/RenderLayer.cpp M WebCore/rendering/RenderLayer.h M WebCore/rendering/RenderTreeAsText.cpp Committed r39640
Note You need to log in before you can comment on or make changes to this bug.